# pythonlibrarystart

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/source/: conf.py  index.rst
src/package1/: module1.py
tests/package1/: test_module1.py
