[tool.poetry]
name = "library1"
version = "0.1.0"
description = ""
authors = ["kfjt <kfjt@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-multiversion = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
